--- a/SPI-AOI/Views/MainWindow.xaml
+++ b/SPI-AOI/Views/MainWindow.xaml
@@ -13,7 +13,8 @@
         MinHeight="1000"
         WindowStartupLocation="CenterScreen"
         Initialized="Window_Initialized"
-        Title="[FII] SPI-AOI" Background="#FFF0F0F0" SizeChanged="Window_SizeChanged" Closing="Window_Closing">
+        Closing="Window_Closing"
+        Title="[FII] SPI-AOI" Background="#FFF0F0F0" SizeChanged="Window_SizeChanged">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="85"/>
@@ -23,17 +24,20 @@
             <DockPanel x:Name="dpnMenu" Margin="10" >
                 <Menu x:Name="MenuStrip" FontSize="15" DockPanel.Dock="Top">
                     <MenuItem  Header="_Menu">
-                        <MenuItem Header="_Model Management">
+                        <MenuItem Header="_Model Management"
+                                  Click="btModelManager_Click">
                             <MenuItem.Icon>
                                 <Image Source="../Resources/Icons/model_icon.png"/>
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem  Header="_Program Setting">
+                        <MenuItem  Header="_Program Setting"
+                                   Click="btAlgorithmSettings_Click">
                             <MenuItem.Icon>
                                 <Image Source="../Resources/Icons/settings.png"/>
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem  Header="_IO Configuration">
+                        <MenuItem  Header="_IO Configuration"
+                                   Click="btIOConfig_Click">
                             <MenuItem.Icon>
                                 <Image Source="../Resources/Icons/ioconfiguration.png"/>
                             </MenuItem.Icon>
@@ -51,7 +55,7 @@
                         <MenuItem  Header="_Models"/>
                     </MenuItem>
                     <MenuItem  Header="_Help">
-                        <MenuItem  Header="_Log"/>
+                        <MenuItem  Header="_Log" Click="MenuItem_Click"/>
                         <MenuItem  Header="_Contact us"/>
                         <MenuItem  Header="_About"/>
                     </MenuItem>
@@ -77,7 +81,9 @@
                                Width="25"/>
                     </Button>
                     <Separator/>
-                    <Button  ToolTip="Admin settings" Style="{StaticResource btToolBarStyle}">
+                    <Button x:Name="btUserManagement"
+                            ToolTip="User management"
+                            Style="{StaticResource btToolBarStyle}">
                         <Image Source="../Resources/Icons/adminsetting.jpg" Width="25"/>
                     </Button>
                     <Separator/>
@@ -230,7 +236,7 @@
                 </Grid>
                 <Grid Grid.Column="1" Margin="3">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="220"/>
+                        <RowDefinition Height="250"/>
                         <RowDefinition Height="360"/>
                         <RowDefinition Height="100"/>
                         <RowDefinition Height="35*"/>
@@ -267,6 +273,10 @@
                                     <StackPanel Orientation="Horizontal" Visibility="Visible">
                                         <Label  Content="SN:" Width="100" Foreground="Gray"/>
                                         <Label x:Name="lbSN" Content="-----" FontSize="15"/>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" Visibility="Visible">
+                                        <Label  Content="Cycle Time:" Width="100" Foreground="Gray"/>
+                                        <Label x:Name="lbCycleTime" Content="-----" FontSize="15"/>
                                     </StackPanel>
                                 </StackPanel>
                             </GroupBox>
