--- a/SPI-AOI/Views/ModelManagement/GerberTools.xaml
+++ b/SPI-AOI/Views/ModelManagement/GerberTools.xaml
@@ -89,6 +89,12 @@
                             ToolTip="Delete Pad (Ctrl + X)">
                         <Image Source="../../Resources/Icons/x_red2.png"></Image>
                     </Button>
+                    <Button x:Name="btActivePad"
+                            Click="btActivePad_Click" Width="35"
+                            Height="35" Margin="5,0,5,0"
+                            ToolTip="Delete Pad (Ctrl + X)">
+                        <Image Source="../../Resources/Icons/active.png"></Image>
+                    </Button>
                     <Button x:Name="btSelectPad"
                             Click="btSelectPad_Click" Width="35"
                             Height="35" Margin="5,0,5,0"
