--- a/SPI-AOI/Views/ModelManagement/GerberTools.xaml
+++ b/SPI-AOI/Views/ModelManagement/GerberTools.xaml
@@ -101,6 +101,12 @@
                             ToolTip="Select Items (Ctrl + B)">
                         <Image Source="../../Resources/Icons/pad.png"></Image>
                     </Button>
+                    <Button x:Name="btUnSelectPad"
+                            Click="btUnSelectPad_Click" Width="35"
+                            Height="35" Margin="5,0,5,0"
+                            ToolTip="Unselect Items">
+                        <Image Source="../../Resources/Icons/padx.png"></Image>
+                    </Button>
                     <Button x:Name="btAdjustsadxXY" 
                             Click="btAdjustXY_Click" Width="35"
                             Height="35" Margin="5,0,5,0"
